--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,10 @@ jobs:
             export DOCKERHUB_USERNAME="${DOCKERHUB_USERNAME}"
             export DOCKERHUB_TOKEN="${DOCKERHUB_TOKEN}"
             cd ~/crud
+            if [ ! -f docker/.env.production ]; then
+              echo "Missing docker/.env.production on server" >&2
+              exit 1
+            fi
             echo "\$DOCKERHUB_TOKEN" | docker login -u "\$DOCKERHUB_USERNAME" --password-stdin
             DOCKERHUB_USERNAME="\$DOCKERHUB_USERNAME" docker compose -f docker-compose.prod.yml pull
             DOCKERHUB_USERNAME="\$DOCKERHUB_USERNAME" docker compose -f docker-compose.prod.yml up -d --remove-orphans
