--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,10 @@ services:
       APP_DEBUG: "false"
       DB_HOST: mysql
       DB_PORT: 3306
+    working_dir: /var/www/html
     volumes:
-      - app_code:/var/www/html
+      - ./storage:/var/www/html/storage
+      - ./bootstrap/cache:/var/www/html/bootstrap/cache
     depends_on:
       - mysql
 
@@ -18,7 +20,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - app_code:/var/www/html:ro
+      - ./storage:/var/www/html/storage:ro
+      - ./bootstrap/cache:/var/www/html/bootstrap/cache:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
@@ -31,5 +34,4 @@ services:
       - mysql_data:/var/lib/mysql
 
 volumes:
-  app_code:
   mysql_data:
