--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,6 +20,7 @@ services:
     ports:
       - "80:80"
     volumes:
+      - ./public:/var/www/html/public:ro
       - ./storage:/var/www/html/storage:ro
       - ./bootstrap/cache:/var/www/html/bootstrap/cache:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
